[package]
name = "savaged-libs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest= { version = "0.11.11", features = ["blocking", "json"]}
futures = "0.3"
wasm-bindgen-futures = "0.4.31"
chrono-tz = "0.8.0"
serde_repr = "0.1.10"

[dependencies.uuid]
version = "1.1.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Serialize/Deserialize
]
